# pytest-parametrize-suite

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  coverage.db  pyproject.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: lint.yml  pythonpublish.yml  tag-release.yml  tests.yml
src/pytest_parametrize_suite/: __init__.py  core.py  plugin.py
tests/: conftest.py  test_core.py  test_plugin.py
